# from-repo-to-minikube

./: Containerfile  README.md  pyproject.toml
infra/: jenkins-01-serviceAccount.yml  jenkins-02-volume.yml  jenkins.deployment.yml  namespace.yml
src/: gunicorn.conf.py  requirements.txt
