[project]
name = "from-repo-to-minikube"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Iago",email = "antonio.iagolg@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "gunicorn (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
